grml-live (0.0.5) unstable; urgency=low

  * Add new scripts to /usr/share/grml-live/examples/buildd/:
    - grml-live_autobuild_grml-small_etch.sh
    - grml-live_autobuild_grml-small_sid.sh
    - grml-live_autobuild_grml64-small_etch.sh
    - grml-live_autobuild_grml64-small_sid.sh
  * Some more FAI error checking.
  * Add new packages to GRML_FULL:
    - pristine-tar

 -- Michael Prokop <mika@grml.org>  Sun, 07 Oct 2007 23:06:28 +0200

grml-live (0.0.4) unstable; urgency=low

  * The -t option for specifying the output directory has been
    renamed into -o. The option -t now specifies the place where
    templates for building the ISO can be found.
  * Option -t can be used for specifying the template directory.
    TEMPLATE_DIRECTORY can be used in /etc/grml/grml-live.conf
  * Check for /var/run/fai/FAI_INSTALLATION_IN_PROGRESS and exit then.
  * /etc/grml/fai/config/hooks/instsoft.GRMLBASE:
    - disable pipeline workaround 
    - create /dev/MAKEDEV in chroot to work around the
      "./MAKEDEV: No such file or directory" problem of some packages
  * Use /var/log/grml-live.log as log file as /var/log/fai/* is too
    dangerous because of automatic removal of the files/dirs via fai.
  * Use class GRML_MEDIUM by default and document GRMLBASE, GRML_* plus
    I386/AMD64 classes in the docs.
  * Add new packages to GRML_FULL:
    - tgt: Linux target framework user-space tools
    - paperkey: extract just the secret information out ouf OpenPGP keys
    - gitpkg: helper scripts for maintaining packages with git
    - iscsitarget: iSCSI Enterprise Target userland tools
    - iscsitarget-module-2.6.22-grml: kernel module for iscsitarget
  * Set $HOSTNAME to according hostname via
    /etc/grml/fai/config/scripts/GRMLBASE/34-hosts
  * Adjust filename in header of /etc/grml/fai/config/scripts/GRMLBASE/*.
  * Use iceweasel/firefox as x-www-browser and w3m as www-browser (if
    available). 
  * Check for presence of the initrd.