@@ -6,6 +6,7 @@ grml-live (0.0.5) unstable; urgency=low
     - grml-live_autobuild_grml64-small_etch.sh
     - grml-live_autobuild_grml64-small_sid.sh
   * Some more FAI error checking.
+  * Update buildd scripts (better subject handling).
   * Add new packages to GRML_FULL:
     - pristine-tar
 
